corrected scrollbar overflow on phone

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,6 +28,7 @@
 /* ----------------Text Fonts ------------------- */
 html{
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 body {
   font-size: 14px;
